Include the implicitly required headers for gxpcolor.h in gdevp14.h.

This declares dev_color_proc_save_dc and related function pointers
before use, correcting a serious gcc warning and fixing compilation
on AIX 5.3 TL 8 SP2. Bug 690883.

Expected differences:

Regression testing showed one difference with rasterized pdfwrite output
from ghostpcl (pcl5cfts/fts.0880 at 600 dpi, no banding) but I could not
reproduce this locally.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10260 a1074d23-0009-0410-80fe-cf8c14f379e6